// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetMeter displays out-of-bounds correctly 1`] = `
<div
  className="WidgetMeter-div-1"
>
  <div
    style={
      Object {
        "backgroundImage": "linear-gradient(to right, transparent, #f00)",
        "gridColumn": "1",
        "gridRow": "1",
        "left": "0px",
        "minWidth": "100%",
        "position": "relative",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "#424242",
        "borderLeft": "2px solid #f00",
        "gridColumn": "1",
        "gridRow": "1",
        "left": "calc(100%)",
        "maxWidth": "0%",
        "minWidth": "0%",
        "position": "relative",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "#424242",
        "borderLeft": "2px solid #f00",
        "gridColumn": "1",
        "gridRow": "1",
        "left": "calc(100%)",
        "maxWidth": "0%",
        "minWidth": "0%",
        "position": "relative",
      }
    }
  />
  <div
    style={
      Object {
        "gridColumn": "1",
        "gridRow": "1",
        "position": "relative",
      }
    }
  >
    <WithStyles(WidgetTextInput)
      Pending={false}
      Units="/ 100"
      alwaysContrastText={true}
      localState={
        Object {
          "set": [Function],
        }
      }
    />
  </div>
</div>
`;

exports[`WidgetMeter matches snapshot 1`] = `
<div
  className="WidgetMeter-div-1"
>
  <div
    style={
      Object {
        "backgroundImage": "linear-gradient(to right, transparent, #00f)",
        "gridColumn": "1",
        "gridRow": "1",
        "left": "0px",
        "minWidth": "100%",
        "position": "relative",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "#424242",
        "borderLeft": "2px solid #00f",
        "gridColumn": "1",
        "gridRow": "1",
        "left": "calc(50%)",
        "maxWidth": "50%",
        "minWidth": "50%",
        "position": "relative",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "#424242",
        "borderLeft": "2px solid #00f",
        "gridColumn": "1",
        "gridRow": "1",
        "left": "calc(50%)",
        "maxWidth": "50%",
        "minWidth": "50%",
        "position": "relative",
      }
    }
  />
  <div
    style={
      Object {
        "gridColumn": "1",
        "gridRow": "1",
        "position": "relative",
      }
    }
  >
    <WithStyles(WidgetTextInput)
      Pending={false}
      Units="/ 100"
      alwaysContrastText={true}
      localState={
        Object {
          "set": [Function],
        }
      }
    />
  </div>
</div>
`;
